[package]
name = "kernel8"
version = "0.1.0"
edition = "2018"

[dependencies]
raspi3_boot = { path = "raspi3_boot" }
# register = "0.3.2"

#
# # [lib]
# # crate-type = ["staticlib"]
# #
# [profile.dev]
# panic = "abort"
# lto = true
# debug = true
#
# [profile.test]
# panic = "abort"
# lto = true
# debug = true
#
# [profile.release]
# panic = "abort"
# lto = true
# debug = true
#
# [dependencies]
# rlibc = "*"

[package.metadata.cargo-xbuild]
sysroot_path = "xbuild_sysroot"
